Closed Bug 1689369 Opened 5 years ago Closed 4 years ago

Crash in [@ OOM | unknown | NS_ABORT_OOM | mozilla::jni::StringParam::GetString]

Categories

(GeckoView :: General, defect, P2)

Unspecified
Android
defect

Tracking

(firefox87 wontfix, firefox88 wontfix, firefox89 fixed)

RESOLVED FIXED
89 Branch
Tracking Status
firefox87 --- wontfix
firefox88 --- wontfix
firefox89 --- fixed

People

(Reporter: fluffyemily, Assigned: m_kato)

References

Details

(Keywords: crash, Whiteboard: [fenix:p1][geckoview:m90])

Crash Data

Attachments

(2 files)

Crash report: https://crash-stats.mozilla.org/report/index/d127a5dc-2438-4fac-9bda-530c60210128

Reason: SIGSEGV /SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so NS_ABORT_OOM xpcom/base/nsDebugImpl.cpp:618
1 libxul.so mozilla::jni::StringParam::GetString widget/android/jni/Refs.h:720
2 libxul.so mozilla::widget::detail::BoxString widget/android/EventDispatcher.cpp:55
3 libxul.so mozilla::widget::detail::BoxObject widget/android/EventDispatcher.cpp:247
4 libxul.so mozilla::widget::detail::BoxObject widget/android/EventDispatcher.cpp:219
5 libxul.so mozilla::widget::detail::BoxObject widget/android/EventDispatcher.cpp:247
6 libxul.so mozilla::widget::detail::BoxObject widget/android/EventDispatcher.cpp:247
7 libxul.so mozilla::widget::detail::BoxData widget/android/EventDispatcher.cpp:294
8 libxul.so mozilla::widget::EventDispatcher::Dispatch widget/android/EventDispatcher.cpp:788
9 libxul.so NS_InvokeByIndex xpcom/reflect/xptcall/md/unix/xptcinvoke_arm.cpp:167

Monitor to ensure this is already fixed.

Severity: -- → S3
Priority: -- → P2
Whiteboard: [fenix:p1]

Elise pointed out a spike and has asked us to take another look at this. Nominating for 90.

Whiteboard: [fenix:p1] → [fenix:p1][geckoview:m90]

Sorry for spam for previous comment.

My interesting point is whether we use fallible allocator on EventDispatcher::Dispatch instead can fix this. Actually JNI code uses infallible allocator for Java String.

And when I look this into https://crash-stats.mozilla.org/signature/?product=Fenix&signature=OOM%20%7C%20unknown%20%7C%20NS_ABORT_OOM%20%7C%20mozilla%3A%3Ajni%3A%3AStringParam%3A%3AGetString&version=87.0.0&date=%3C2021-04-13T03%3A41%3A37%2B00%3A00&date=%3E%3D2021-04-06T03%3A41%3A37%2B00%3A00, all crashes are Android CPU ABI is arm64-v8 and cpu arch is arm. And most locales are zh-CN.

Why does users use arm build on ARM64 device for release channel? Chinese Google play issue?

Assignee: nobody → m_kato

If JavaScript string is UTF-16, we can return error when we cannot allocate
Java string. But if it is Latin-1, GeckoView crashes due to using infallible
version of StringParam.

So we should use fallible version of StringParam instead even if Latin-1.

Depends on D112175

Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/023692d11501 Add fallible version of mozilla::jni::StringParam. r=geckoview-reviewers,aklotz https://hg.mozilla.org/integration/autoland/rev/e355ab90d444 Use fallible version of StringParam in BoxString. r=geckoview-reviewers,agi
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
See Also: → 1780745
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: