Bug 1689369 - Add fallible version of mozilla::jni::StringParam. r=geckoview-reviewers,aklotz

Differential Revision: https://phabricator.services.mozilla.com/D112175